# emeraldya

./: .gitignore  .pre-commit-config.yaml  README.md  builder.py  converter.py  furigana.py  main.py  processor.py  pyproject.toml  test_builder.py  test_processor.py
emeraldya/: converter.py  furigana.py  main.py  processor.py
emeraldya/templates/: ririkon.html.jinja  toratore.html.jinja
