[tool.poetry]
name = "emeraldya"
version = "0.1.0"
description = "Create your own annotated translation from Japanese to English."
authors = ["Matteo Silvestro <matteosilvestro@live.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.3"
markdown = "^3.6"
pip = "^24.0"
install = "^1.3.5"

[tool.poetry.scripts]
emeraldya = 'emeraldya.main:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
